--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ perl:
   - "5.22-thr"
   - "5.24"
   - "5.24-thr"
+  - "5.26"
+  - "5.28-thr"
   - "dev"
 
 # not run tag pushes
@@ -66,4 +68,6 @@ matrix:
       env: COVERAGE=1 AUTHOR_TESTING=1 RELEASE_TESTING=1 # enables coverage+coveralls reporting
   allow_failures:
     - perl: "dev"
-
+    - perl: "5.10"
+    - perl: "5.24"
+      env: COVERAGE=1 AUTHOR_TESTING=1 RELEASE_TESTING=1 # enables coverage+coveralls rep
